# jsonpack-py

./: CONTRIBUTORS.md  README.md  pyproject.toml
jsonpackpy/: __init__.py
