[project]
name = "jsonpackpy"
version = "0.0.1"
authors = [
  { name="astatin3", email="mj@mikovsky.com" },
]
description = "A compression algorithm for JSON, converted to Python!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/astatin3/jsonpack-py"
Issues = "https://github.com/astatin3/jsonpack-py/issues"

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"